--- a/002/index.html
+++ b/002/index.html
@@ -8,8 +8,36 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="header">12345
-  <h1 class="header__title">title</h1>
+
+<div class="container" id="app">
+  <div class="card">
+    <h1>{{ title }}</h1>
+    <div class="form-control">
+      <input
+          type="text"
+          :placeholder="placeholderString"
+          v-model="inputValue"
+          @keypress.enter="addNewNote"
+      />
+      <span>Символов уже использовано: {{inputValue.length}} </span>
+    </div>
+    <button class="btn primary" @click="addNewNote">Добавить</button>
+    <hr>
+    <ul class="list" v-if="notes.length !== 0">
+      <li class="list-item" v-for="(note, idx) in notes">
+        {{ idx + 1 }}. {{ toUpperCase(note) }}
+        <button class="btn danger" @click="removeNote(idx)">удалить</button>
+      </li>
+      <hr />
+      <li>
+        <strong>Общее количество заметок: {{ notes.length }}</strong>
+      </li>
+    </ul>
+    <div v-else> Заметок пока нет... может добавим первую?</div>
+  </div>
 </div>
+
+<script src="https://unpkg.com/vue@next"></script>
+<script src="app.js"></script>
 </body>
 </html>
