--- a/003/index.html
+++ b/003/index.html
@@ -1,33 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Counter</title>
-  <link rel="stylesheet" href="theme.css"/>
+	<meta charset="UTF-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<title>003</title>
+	<link rel="stylesheet" href="theme.css"/>
+	<style>
+		[v-cloak] {
+			display: none;
+		}
+	</style>
 </head>
 <body>
 <div class="container pt-5" id="app" v-cloak>
-  <div class="card center">
-    <h1 v-text="title"></h1>
-    <div v-html="myHtml"></div>
-    <ul class="list" v-if="items.length">
-      <li
-          class="list-item"
-          v-for="(item, i) in evenItems"
-          @click="items.splice(i, 1)"
-          :key="item"
-      >
-        <strong>{{ item }}</strong>&nbsp;
-        <input type="text" @click.prevent.stop>
-      </li>
-      <!--      <li class="list-item" v-for="(value, key) in person">-->
-      <!--        <strong>{{ key }}: </strong>{{ value }}-->
-      <!--      </li>-->
-    </ul>
-    <h3 v-show="items.length === 0">Элементов нет</h3>
+	<div class="card center">
 
-  </div>
+		<div v-html="myHtml"></div>
+		<!--		<h2>{{ title }}</h2>-->
+		<!--		<h2 v-once>{{ title }}</h2>-->
+		<!--		<h2 v-pre>{{ title }}</h2>-->
+
+		<!--		<button class="btn" @click="title = 'Title New'">Change title</button>-->
+
+		<div class="form-control">
+			<label>
+				<input type="text" @keyup.enter="addItem" ref="myInput">
+			</label>
+		</div>
+
+		<ul class="list" v-if="items.length !== 0">
+			<li
+					class="list-item"
+					v-for="(item, idx) in evenItems"
+					:key="item"
+					@click="remove(idx), log(item)"
+			>
+				<strong>{{ item }}</strong>&nbsp;
+				<label>
+					<input type="text" @click.stop>
+				</label>
+			</li>
+			<!--			<li class="list-item" v-for="(value, key) in person">-->
+			<!--				<strong>{{ key }}: </strong> {{ value }}-->
+			<!--			</li>-->
+		</ul>
+		<h3 v-show="items.length === 0">Элементов нет</h3>
+
+	</div>
 </div>
 
 <script src="https://unpkg.com/vue@next"></script>
